First Client Landing page

--- a/Views/Clients/DashBoard.cshtml
+++ b/Views/Clients/DashBoard.cshtml
@@ -43,7 +43,7 @@
             </nav> *@
             <div id="sidebarMenu" class="collapse">
                 <div class="list-group ">
-                    <a asp-controller="#" asp-action="#" class="list-group-item list-group-item-action">Clients</a>
+                    <a asp-controller="Clients" asp-action="Landing" class="list-group-item list-group-item-action">Clients</a>
                     <a asp-controller="#" asp-action="#" class="list-group-item list-group-item-action">Projects</a>
                     <a asp-controller="#" asp-action="#" class="list-group-item list-group-item-action">Devices</a>
                     <a asp-controller="#" asp-action="#" class="list-group-item list-group-item-action">Summary</a>
@@ -57,13 +57,13 @@
             
                 <div class="col-md-6">
                     <div class="content-box">
-                        <a asp-controller="" asp-action="" class="card-link">
+                        <a asp-controller="Clients" asp-action="Landing" class="card-link">
                             <div class="card">
                                 <div class="card-body text-center">
                                 
                                     <i class="bi bi-people mb-2 text-primary" style="font-size: 3rem;"></i><br />
 
-                                    <a asp-controller="#" asp-action="#" class="btn stretched-link">Clients</a>
+                                    <a asp-controller="Clients" asp-action="Landing" class="btn stretched-link">Clients</a>
                                 </div>
                             </div>
                         </a>
