--- a/Views/Clients/DashBoard.cshtml
+++ b/Views/Clients/DashBoard.cshtml
@@ -73,13 +73,13 @@
            
                 <div class="col-md-6">
                     <div class="content-box">
-                        <a asp-controller="" asp-action="" class="card-link">
+                        <a asp-controller="Projects" asp-action="projectList" class="card-link">
                             <div class="card">
                                 <div class="card-body text-center">
                                     
                                     <i class="bi bi-folder  mb-2 text-primary" style="font-size: 3rem;"></i><br />
 
-                                    <a asp-controller="#" asp-action="#" class="btn stretched-link">Projects</a>
+                                    <a asp-controller="Projects" asp-action="projectList" class="btn stretched-link">Projects</a>
 
                                 </div>
                             </div>
