subnet controller progress work

--- a/Views/Projects/projectList.cshtml
+++ b/Views/Projects/projectList.cshtml
@@ -33,7 +33,7 @@
                                 <td>
                                     <a asp-controller="Subnets" asp-action="subnetList" class="btn btn-dark">
                                         Networks
-
+                                        <input type="hidden" name="projectID" value="@item.projectID" />
                                     </a>
                                 </td>
                             </tr>
